--- a/index.html
+++ b/index.html
@@ -13,27 +13,75 @@
 </head>
 <body>
 <!---Меню-->
-<nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-        <div class="text-lvl-1"><a class="logo" href="#">WebDeveloper</a></div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse text-black justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link " href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
+<nav class="navbar navbar-expand-lg navbar-light fixed-top scrolled">
+        <div class="container-fluid">
+            <div class="col-12">
+                <a class="logo" href="#">
+                    <i class="fas fa-code"></i>
+                    WebDeveloper</a>
 
-            </ul>
+                <a class="menu-btn">
+                    <i class="fas fa-bars"></i>
+                </a>
+
+                <div class="menu">
+                    <div class="col-md-12 d-flex text-center">
+                        <div class="col-md-3">
+                            <a class="text-lvl-5" href="#">Головна</a>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="menu-list">
+                                <div class="text-lvl-5">Послуги</div>
+                                <a class="menu-links" href="#">LadingPages</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="menu-list">
+                                <div class="text-lvl-5">Портфоліо</div>
+                                <a class="menu-links" href="#">LadingPages</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="menu-list">
+                                <div class="text-lvl-5">Котакти</div>
+                                <ul>
+                                    <li>
+                                        <i class="fas fa-envelope"></i>
+                                        <a class="menu-links" href="#">
+                                            neuronsoftml@gmail.com
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-phone"></i>
+                                        <a class="menu-links" href="#">
+                                            +380950356175
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div class="social-icon">
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-skype"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-viber"></i>
+                                    </a>
+                                    <a href="#">
+                                        <i class="fab fa-telegram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
 </nav>
 <!---Меню-->
 
@@ -46,6 +94,26 @@
                     <div class="text-lvl-6">Привіт усім!</div>
                     <div class="text-lvl-1">Мене звати Микола</div>
                     <div class="text-lvl-5">Я, Full stack WEB Developer</div>
+                    <div class="social-icon">
+                        <a href="#">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-skype"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-viber"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-telegram"></i>
+                        </a>
+                    </div>
+                    <div class="pt-3">
+                        <a href="#" class="btn-lvl-1">Замовити проект</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -53,10 +121,52 @@
                     <img  width="60%" src="images/developer.svg" class="developer"/>
                 </div>
             </div>
+
+            <div class="info-block">
+                    <div class="col-lg-2">
+                        <div class="info">
+                            <div class="title-info">100+</div>
+                            <div class="description-info">Споживачів</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="info">
+                            <div class="title-info">100+</div>
+                            <div class="description-info">Проектів</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="info">
+                            <div class="title-info">100+</div>
+                            <div class="description-info">Готових проектів</div>
+                        </div>
+                    </div>
+            </div>
         </div>
     </div>
 </section>
 <!---home-->
+<section class="about-me">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img-sfg" src="images/cliapsa.svg"/>
+                </div>
+                <p class="col-md-6">
+                    <div class="text-lvl-6">Про мене</div>
+                    <div class="text-lvl-1">Full stack Web developer</div>
+                    <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно. Якщо ви збираєтесь використовувати Lorem Ipsum, ви маєте упевнитись в тому, що всередині тексту не приховано нічого, що могло б викликати у читача конфуз. Більшість відомих генераторів Lorem Ipsum в Мережі генерують текст шляхом повторення наперед заданих послідовностей Lorem Ipsum.</p>
+                </div>
+            </div>
+        </div>
+</section>
+<!---main-->
+<section class="main">
+    <div class="container">
+
+    </div>
+</section>
+<!---main-->
 
 
 </body>
