--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
             </div>
 
             <div class="info-block">
-                    <div class="col-lg-2">
+                    <div class="col-2">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Споживачів</div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-2">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Проектів</div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-2">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Готових проектів</div>
@@ -146,27 +146,88 @@
     </div>
 </section>
 <!---home-->
+
+<!---about-me-->
 <section class="about-me">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
                     <img class="img-sfg" src="images/cliapsa.svg"/>
                 </div>
-                <p class="col-md-6">
+                <div class="col-md-6">
                     <div class="text-lvl-6">Про мене</div>
                     <div class="text-lvl-1">Full stack Web developer</div>
                     <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно. Якщо ви збираєтесь використовувати Lorem Ipsum, ви маєте упевнитись в тому, що всередині тексту не приховано нічого, що могло б викликати у читача конфуз. Більшість відомих генераторів Lorem Ipsum в Мережі генерують текст шляхом повторення наперед заданих послідовностей Lorem Ipsum.</p>
+                    <div class="pt-3">
+                        <a href="#" class="btn-lvl-1">Завантажити резюме</a>
+                    </div>
                 </div>
             </div>
         </div>
 </section>
-<!---main-->
-<section class="main">
-    <div class="container">
+<!---about-me-->
 
+<!---service-->
+<section class="service">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-lvl-6">Наш сервіс</div>
+                <div class="text-lvl-1">Які послуги ми Вам пропунуємо</div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card-body-service">
+                   <img src="images/webDeveloper.svg">
+                    <div class="text-lvl-5">Веб-Розробка</div>
+                    <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно.</p>
+                    <div class="mt-4">
+                        <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                    </div>
+                    <label class="line"></label>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card-body-service">
+                    <img src="images/srm.svg">
+                    <div class="text-lvl-5">CRM-Системи</div>
+                    <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно.</p>
+                    <div class="mt-4">
+                        <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                    </div>
+                    <label class="line"></label>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card-body-service">
+                    <img src="images/network.svg">
+                    <div class="text-lvl-5">Веб-Адміністрування</div>
+                    <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно.</p>
+                    <div class="mt-4">
+                        <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                    </div>
+                    <label class="line"></label>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
-<!---main-->
+<!---service-->
+
+<!---portfolio-->
+<section class="portfolio">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-lvl-6">Наше портфоліо</div>
+                <div class="text-lvl-1">Перевірте наші останні виконанні роботи</div>
+            </div>
+        </div>
+    </div>
+</section>
+<!---portfolio-->
 
 
 </body>
