--- a/index.html
+++ b/index.html
@@ -13,75 +13,33 @@
 </head>
 <body>
 <!---Меню-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top scrolled">
-        <div class="container-fluid">
-            <div class="col-12">
-                <a class="logo" href="#">
-                    <i class="fas fa-code"></i>
-                    WebDeveloper</a>
-
-                <a class="menu-btn">
-                    <i class="fas fa-bars"></i>
-                </a>
-
-                <div class="menu">
-                    <div class="col-md-12 d-flex text-center">
-                        <div class="col-md-3">
-                            <a class="text-lvl-5" href="#">Головна</a>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="menu-list">
-                                <div class="text-lvl-5">Послуги</div>
-                                <a class="menu-links" href="#">LadingPages</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="menu-list">
-                                <div class="text-lvl-5">Портфоліо</div>
-                                <a class="menu-links" href="#">LadingPages</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="menu-list">
-                                <div class="text-lvl-5">Котакти</div>
-                                <ul>
-                                    <li>
-                                        <i class="fas fa-envelope"></i>
-                                        <a class="menu-links" href="#">
-                                            neuronsoftml@gmail.com
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-phone"></i>
-                                        <a class="menu-links" href="#">
-                                            +380950356175
-                                        </a>
-                                    </li>
-                                </ul>
-                                <div class="social-icon">
-                                    <a href="#">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fab fa-skype"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fab fa-github"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fab fa-viber"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fab fa-telegram"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light shadow p-3 mb-5 bg-white rounded fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-brand">
+            <a class="logo" href="#">
+                <i class="fas fa-code"></i>
+                WebDeveloper</a>
         </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Головна</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Послуги</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Портфоліо</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Контакти</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 <!---Меню-->
 
@@ -111,7 +69,7 @@
                             <i class="fab fa-telegram"></i>
                         </a>
                     </div>
-                    <div class="pt-3">
+                    <div class="pt-5">
                         <a href="#" class="btn-lvl-1">Замовити проект</a>
                     </div>
                 </div>
@@ -216,6 +174,7 @@
 </section>
 <!---service-->
 
+
 <!---portfolio-->
 <section class="portfolio">
     <div class="container">
@@ -226,8 +185,75 @@
             </div>
         </div>
     </div>
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="link-portfolio">
+                    <a href="">
+                        <img class="img-portfolio" src="images/portfolio/project.jpg">
+                    </a>
+                    <div class="card-body">
+                        <div class="text-lvl-5">Мамалигівська отг</div>
+                        <p>
+                            Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
+                        </p>
+                        <div class="mt-4">
+                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                        </div>
+                        <label class="line"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="link-portfolio">
+                    <a href="">
+                        <img class="img-portfolio" src="images/portfolio/project.jpg">
+                    </a>
+                    <div class="card-body">
+                        <div class="text-lvl-5">Мамалигівська отг</div>
+                        <p>
+                            Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
+                        </p>
+                        <div class="mt-4">
+                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                        </div>
+                        <label class="line"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="link-portfolio">
+                    <a href="">
+                        <img class="img-portfolio" src="images/portfolio/project.jpg">
+                    </a>
+                    <div class="card-body">
+                        <div class="text-lvl-5">Мамалигівська отг</div>
+                        <p>
+                            Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
+                        </p>
+                        <div class="mt-4">
+                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
+                        </div>
+                        <label class="line"></label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 <!---portfolio-->
+
+<!---Footer-->
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="copyright">
+                <div class="col-md-12"><div class="text-copyright">Copyright © 2020 Всі права захищені.</div></div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!---Footer-->
 
 
 </body>
