--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-6">
                 <div class="banner-content-images justify-content-center">
-                    <img  width="60%" src="images/developer.svg" class="developer"/>
+                    <img  width="50%" src="images/test.webp" class="developer"/>
                 </div>
             </div>
 
@@ -254,6 +254,7 @@
     </div>
 </footer>
 <!---Footer-->
+
 
 
 </body>
