--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-md-6">
                 <div class="banner-content-images justify-content-center">
-                    <img  width="50%" src="images/test.webp" class="developer"/>
+                    <img  width="40%" src="images/test.png" class="developer"/>
                 </div>
             </div>
 
@@ -242,6 +242,42 @@
     </div>
 </section>
 <!---portfolio-->
+
+<!---contact-->
+<section class="contact">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="text-lvl-6">Наші контакти</div>
+                <div class="text-lvl-1">Залишились питання? Напишіть нам!</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+            <form>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="contact-form">
+                            <input type="text" name="name" autocapitalize="off" required/>
+                            <label  class="label-input">
+                                <span class="content-name">П.І.П</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="contact-form">
+                            <input type="text" name="name" autocapitalize="off" required/>
+                            <label  class="label-input">
+                                <span class="content-name">П.І.П</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </form>
+    </div>
+</section>
+<!---contact-->
 
 <!---Footer-->
 <footer class="footer">
