--- a/index.html
+++ b/index.html
@@ -269,8 +269,38 @@
                         <div class="contact-form">
                             <input type="text" name="name" autocapitalize="off" required/>
                             <label  class="label-input">
-                                <span class="content-name">П.І.П</span>
+                                <span class="content-name">Email</span>
                             </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="contact-form">
+                            <input type="text" name="name" autocapitalize="off" required/>
+                            <label  class="label-input">
+                                <span class="content-name">Номер телефону</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="contact-form">
+                            <input type="text" name="name" autocapitalize="off" required/>
+                            <label  class="label-input">
+                                <span class="content-name">Організація</span>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12">
+                        <div class="contact-form">
+                            <textarea class="form-control" autocapitalize="off" required rows="3"></textarea>
+                            <label  class="label-input">
+                                <span class="content-name">Повідомлення</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-12 d-flex justify-content-end">
+                        <div class="pt-5">
+                            <a href="#" class="btn-lvl-1">Відправити</a>
                         </div>
                     </div>
                 </div>
