--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Головна</a>
+                    <a class="nav-link" href="#home">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Послуги</a>
+                    <a class="nav-link" href="#about-me">Про мене</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Портфоліо</a>
+                    <a class="nav-link" href="#service">Послуги</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Контакти</a>
+                    <a class="nav-link" href="#portfolio">Портфоліо</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Контакти</a>
                 </li>
             </ul>
         </div>
@@ -44,7 +47,7 @@
 <!---Меню-->
 
 <!---home-->
-<section class="home">
+<section class="home" id="home">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
@@ -106,7 +109,7 @@
 <!---home-->
 
 <!---about-me-->
-<section class="about-me">
+<section class="about-me" id="about-me">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
@@ -120,13 +123,14 @@
                         <a href="#" class="btn-lvl-1">Завантажити резюме</a>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
+
 </section>
 <!---about-me-->
 
 <!---service-->
-<section class="service">
+<section class="service" id="service">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -176,7 +180,7 @@
 
 
 <!---portfolio-->
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -244,7 +248,7 @@
 <!---portfolio-->
 
 <!---contact-->
-<section class="contact">
+<section class="contact" id="contact">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -313,8 +317,12 @@
 <footer class="footer">
     <div class="container">
         <div class="row">
-            <div class="copyright">
-                <div class="col-md-12"><div class="text-copyright">Copyright © 2020 Всі права захищені.</div></div>
+            <div class="col-md-12">
+                <div class="copyright">
+                    <div class="text-copyright">
+                    Copyright © 2020 Всі права захищені.
+                    </div>
+                </div>
             </div>
         </div>
     </div>
