--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">Головна</a>
+                    <a class="menu-link" href="#home">Головна</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-me">Про мене</a>
+                    <a class="menu-link" href="#about-me">Про мене</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#service">Послуги</a>
+                    <a class="menu-link" href="#service">Послуги</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#portfolio">Портфоліо</a>
+                    <a class="menu-link" href="#portfolio">Портфоліо</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Контакти</a>
+                    <a class="btn-lvl-3" href="#contact">Зв'яжіться з нами</a>
                 </li>
             </ul>
         </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-6">
                 <div class="banner-content-images justify-content-center">
-                    <img  width="40%" src="images/test.png" class="developer"/>
+                    <div class="convas"></div>
                 </div>
             </div>
 
@@ -121,6 +121,13 @@
                     <p>Існує багато варіацій уривків з Lorem Ipsum, але більшість з них зазнала певних змін на кшталт жартівливих вставок або змішування слів, які навіть не виглядають правдоподібно. Якщо ви збираєтесь використовувати Lorem Ipsum, ви маєте упевнитись в тому, що всередині тексту не приховано нічого, що могло б викликати у читача конфуз. Більшість відомих генераторів Lorem Ipsum в Мережі генерують текст шляхом повторення наперед заданих послідовностей Lorem Ipsum.</p>
                     <div class="pt-3">
                         <a href="#" class="btn-lvl-1">Завантажити резюме</a>
+                    </div>
+                    <div class="turnabout">
+                        <div  class="box"><img src="images/icon/1.svg"></div>
+                        <div  class="box"><img src="images/icon/2.svg"></div>
+                        <div  class="box"><img src="images/icon/3.svg"></div>
+                        <div  class="box"><img src="images/icon/4.svg"></div>
+                        <div  class="box"><img src="images/icon/5.svg"></div>
                     </div>
                 </div>
             </div> 
