--- a/index.html
+++ b/index.html
@@ -83,25 +83,27 @@
                 </div>
             </div>
 
-            <div class="info-block">
-                    <div class="col-2">
+            <div class="col-md-12">
+                <div class="info-block">
+                    <div class="col">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Споживачів</div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Проектів</div>
                         </div>
                     </div>
-                    <div class="col-2">
+                    <div class="col">
                         <div class="info">
                             <div class="title-info">100+</div>
                             <div class="description-info">Готових проектів</div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
@@ -123,11 +125,11 @@
                         <a href="#" class="btn-lvl-1">Завантажити резюме</a>
                     </div>
                     <div class="turnabout">
-                        <div  class="box"><img src="images/icon/1.svg"></div>
-                        <div  class="box"><img src="images/icon/2.svg"></div>
-                        <div  class="box"><img src="images/icon/3.svg"></div>
-                        <div  class="box"><img src="images/icon/4.svg"></div>
-                        <div  class="box"><img src="images/icon/5.svg"></div>
+                        <div  class="col"><img src="images/icon/1.svg"></div>
+                        <div  class="col"><img src="images/icon/5.svg"></div>
+                        <div  class="col"><img src="images/icon/2.svg"></div>
+                        <div  class="col"><img src="images/icon/3.svg"></div>
+                        <div  class="col"><img src="images/icon/4.svg"></div>
                     </div>
                 </div>
             </div> 
@@ -200,54 +202,43 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="link-portfolio">
-                    <a href="">
-                        <img class="img-portfolio" src="images/portfolio/project.jpg">
-                    </a>
                     <div class="card-body">
                         <div class="text-lvl-5">Мамалигівська отг</div>
                         <p>
                             Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
                         </p>
-                        <div class="mt-4">
-                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
-                        </div>
-                        <label class="line"></label>
+                        <a href="#">
+                            <img src="images/desctop.png">
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="link-portfolio">
-                    <a href="">
-                        <img class="img-portfolio" src="images/portfolio/project.jpg">
-                    </a>
-                    <div class="card-body">
+                    <div class="card-body bg-gradient-2">
                         <div class="text-lvl-5">Мамалигівська отг</div>
                         <p>
                             Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
                         </p>
-                        <div class="mt-4">
-                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
-                        </div>
-                        <label class="line"></label>
+                        <a href="#">
+                            <img src="images/desctop.png">
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="link-portfolio">
-                    <a href="">
-                        <img class="img-portfolio" src="images/portfolio/project.jpg">
-                    </a>
-                    <div class="card-body">
+                    <div class="card-body bg-gradient-3">
                         <div class="text-lvl-5">Мамалигівська отг</div>
                         <p>
                             Have whose a two night earth she set you creeping replenish place whales move Forth first him seed green.
                         </p>
-                        <div class="mt-4">
-                            <a href="#" class="btn-lvl-2">Дізнатися більше</a>
-                        </div>
-                        <label class="line"></label>
+                        <a href="#">
+                            <img src="images/desctop.png">
+                        </a>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
